# softcompute

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  bootstrap-cmake-llvm-mingw-win.bat  premake5.lua
cmake/: mingw64-cross.cmake
sandbox/: dnn_fully_connected_layer.comp  dnn_tanh_activation.comp
sandbox/mingw-jit/: Makefile
scripts/: bootstrap-clang-jit-linux.sh
shaders/: ao.comp  twice.comp
spirv_cross/: internal_interface.hpp
src/: OptionParser.cpp  dll-engine.cc  dll-engine.h  jit-engine.cc  jit-engine.h  loguru-impl.cc  main.cc  premake5.lua  softgl.cc  softgl.h
test/: premake5.lua  test-main.cc
